# fennel

./: .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: architecture.rst  changelog.rst  cli.rst  conf.py  guide.rst  index.rst  installation.rst  motivation.rst  reference.rst  requirements.txt
fennel/: __init__.py  __main__.py  app.py  cli.py  exceptions.py  job.py  keys.py  logging.py  models.py  settings.py  status.py  utils.py
fennel/client/: __init__.py  actions.py  results.py  state.py  task.py  waiting.py
fennel/client/aio/: __init__.py  actions.py  results.py  state.py  task.py  utils.py  waiting.py
fennel/worker/: __init__.py  broker.py  discovery.py  executor.py  worker.py
fennel/worker/lua/: maintenence.lua  schedule.lua
tests/: conftest.py
tests/helpers/: __init__.py  job.py  results.py  worker.py
tests/integration/: test_cancellation.py  test_dead.py  test_recovery.py  test_worker.py
tests/performance/: test_benchmark.py
tests/stress/: test_blocking.py
tests/stress/aio/: test_blocking.py
tests/unit/: test_cli.py  test_job.py  test_utils.py
tests/unit/client/: test_actions.py  test_interface.py  test_state.py  test_waiting.py
tests/unit/client/aio/: test_actions.py  test_interface.py  test_state.py  test_waiting.py
tests/unit/worker/: test_ack.py  test_broker.py  test_discovery.py  test_execution.py  test_handle.py  test_loop.py
