[tool.poetry]
name = "fennel"
version = "0.2.3"
description = "A task queue for Python based on Redis Streams."
authors = ["Matt Westcott <m.westcott@gmail.com>"]
license = "MIT"
homepage = "https://fennel.readthedocs.io"
repository = "https://github.com/mjwestcott/fennel"

[tool.poetry.dependencies]
python = "^3.7"
aioredis = "^1.3.0"
redis = "^3.3"
uvloop = "^0.14.0"
click = "^7.0"
structlog = "^20.0"
colorama = "^0.4.1"
pydantic = "^1.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
flake8 = "^3.7"
isort = "^4.3"
mypy = "^0.720.0"
ipython = "^7.8"
hypothesis = "^4.36"
freezegun = "^0.3.12"
pytest = "^5.1"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pytest-mypy = "^0.4.1"
pytest-asyncio = "^0.10.0"
pytest-benchmark = "^3.2"
pytest-clarity = {version = "^0.1.0-alpha.1", allow-prereleases = true}
tox = "^3.14"
sphinx = "^2.1"
sphinx_rtd_theme = "^0.4.3"
sphinx-click = "^2.3"

[tool.poetry.scripts]
fennel = 'fennel.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
